finished fixing introduction

--- a/Methods/HOBD.bib
+++ b/Methods/HOBD.bib
@@ -135,17 +135,6 @@ archivePrefix = "arXiv",
    Month="Oct"
 }
 
-@Article{zubeidi2014,
-   Author="Al-Zubeidi, D.  and Thangarajh, M.  and Pathak, S.  and Cai, C.  and Schlaggar, B. L.  and Storch, G. A.  and Grange, D. K.  and Watson, M. E. ",
-   Title="{{F}atal human herpesvirus 6-associated encephalitis in two boys with underlying {P}{O}{L}{G} mitochondrial disorders}",
-   Journal="Pediatr. Neurol.",
-   Year="2014",
-   Volume="51",
-   Number="3",
-   Pages="448--452",
-   Month="Sep"
-}
-
 @Article{peterson9,
    Author="Burgess, G. C.  and Kandala, S.  and Nolan, D.  and Laumann, T. O.  and Power, J. D.  and Adeyemo, B.  and Harms, M. P.  and Petersen, S. E.  and Barch, D. M. ",
    Title="{{E}valuation of {D}enoising {S}trategies to {A}ddress {M}otion-{C}orrelated {A}rtifacts in {R}esting-{S}tate {F}unctional {M}agnetic {R}esonance {I}maging {D}ata from the {H}uman {C}onnectome {P}roject}",
@@ -434,4 +423,15 @@ archivePrefix = "arXiv",
    Volume="80",
    Pages="360--378",
    Month="Oct"
+}
+
+@Article{Battiston2017,
+   Author="Battiston, F.  and Nicosia, V.  and Chavez, M.  and Latora, V. ",
+   Title="{{M}ultilayer motif analysis of brain networks}",
+   Journal="Chaos",
+   Year="2017",
+   Volume="27",
+   Number="4",
+   Pages="047404",
+   Month="Apr"
 }
