--- a/Methods/HOBD.tex
+++ b/Methods/HOBD.tex
@@ -244,6 +244,8 @@ Given a brain activation matrix or a $n^{th}$ order functional connectivity matr
 
 By concatenating the functional connectivity of all subjects into a single matrix before PCA reduction, we guarantee consistency in the orientation of principal components in the reduced functional connectivity matrix across all subjects. As a result, although the original voxel order is disrupted in the reduction process, we are able to maintain activation alignment across subjects and preserve an effective representation of the dynamic correlation structure.
 
+In addition, PCA reduction of brain activities follows division by similarity in activity. While regions with similar activity are combined, regions that display dissimilar patterns are isolated and highlighted. This process is inherently beneficial to functional connectivity analysis, as we are eliminating information redundancy from areas that display identical or similar activity, and place our focus on areas that possess greater differences in functionality. Intuitively, this advantage also extends to higher levels, where interactions displaying similar relationship with the network are combined, resulting in highly informational correlation structures of very diverse networks.
+
 \subsection{Multi-Subject Decoding Analysis with TimeCorr ISFC}
 The Multi-Subject Decoding Analysis is a method designed to find stimulus-dependent activations in an fMRI dataset by cross referencing data from multiple subjects \citep{jeremy2017}. Through application of Multi-Subject TimeCorr ISFC on two equal divisions of the subject data, non stimulus-driven neural activities are dampened and activities that are common across subjects are emphasized, thereby increasing the salience of patterns that reflect activities that are only stimulus-driven. Additionally, when the correlation between the same time point in both sub-groups is high, it indicates that the average brain activities in one group demonstrates very high similarity with the average brain activities of all subjects in the other group at that time point. When the brain activities of multiple subjects display high similarity for certain time points in their brain activations time sequence, then intuitively there's a high probability that their brain responses for those time points are uniformly caused by their common stimulus. Using this logic, the decoding accuracy of the dataset---the percentage of time points that demonstrates highest correlation with themselves across two sub-divisions of the dataset---gives an accurate representation of
 
@@ -280,13 +282,17 @@ Given a multi-subject dataset containing $S$ subjects, each possessing $T$ time 
 \newpage
 \section{Results}
 \subsection{Testing Single Subject TimeCorr on Synthetic Datasets}
-To conduct a side-by-side comparison of the correlation recovery functionalities between the TimeCorr method and the traditional sliding window method, we constructed synthetic datasets with pre-defined correlation patterns using Cholesky decomposition. This approach takes an original X variable (or matrix) and uses the Cholesky transformation to create a new, correlated, Y variable. Using this approach, we are able generate a time sequence of synthetic brain activations that exactly follows a pre-designated a dynamically correlation structure.
+To conduct a side-by-side comparison of the correlation recovery functionalities between the TimeCorr method and the traditional sliding window method, we constructed synthetic datasets with pre-defined correlation patterns using Cholesky decomposition. This approach takes a random matrix X and an original correlation structure R, and uses the Cholesky transformation to create a new, correlated, Y matrix:
+\begin{align*}
+Y = Cholesky(R) \cdot X
+\end{align*}
+Using this approach, we are able generate a time sequence of synthetic brain activations that exactly follows a pre-designated a dynamically correlation structure.
 
-Two kinds of synthetic datasets were generated to test different features of TimeCorr: datasets divided into multiple blocks, each of different correlation structures, and datasets with ramping correlation structures.
+Two kinds of synthetic datasets were generated to test different features of TimeCorr: (1) datasets divided into multiple blocks, each of different correlation structures, to test how TimeCorr performs when the correlation changes abruptly, (2) and datasets with ramping correlation structures to test how TimeCorr performs when the correlation changes gradually.
 
 \subsubsection{Single Subject Synthetic Dataset with block correlations}
 
-In this dataset, we divided the time sequence into $N$ blocks of equal time lengths. Each block possesses a different correlation that's consistent throughout the length of the block. This dataset will be used to test TimeCorr's ability to distinguish different correlation structures within a dataset. To generate the dataset:
+In datasets with block correlations, we divided the time sequence into $N$ blocks of equal time lengths. Each block possesses a different correlation that's consistent throughout the length of the block. These datasets will be used to test TimeCorr's ability handle abrupt correlation changes in a time series. To generate the block correlation dataset:
 \begin{enumerate}
 \item Using a random normal distribution with mean equal to 0 and variance equal to 1, generate a dataset X of dimensions $T$ by $V$, where $T$ and $V$ represents the desired time length and voxel (brain region) count, respectively.
 \item Design a correlation matrix of dimensions $V$ by $V$ for each of the $N$ blocks, denoted $R_n$.
@@ -298,14 +304,16 @@ Where $Cholesky(R_n)$ represents the Cholesky decomposition of the correlation m
 \item Piecing all of the blocks together to form the new synthetic dataset W that possesses the designated dynamic correlation structure.
 \end{enumerate}
 
+To evaluate and compare the performances of TimeCorr and the sliding window method in recovering the ground truth in block correlation datasets, we used four metrics: (1) correlation with the true correlation in each block, (2) MSE with the true correlation in each block, (3) correlation with the temporal ground truth, and (4) MSE with the temporal ground truth. The first two metrics were chosen to demonstrate how well TimeCorr and the sliding window method can distinguish the true correlation within each block from the ground truth in other blocks. The last two metrics were chosen to demonstrate the overall performance of TimeCorr and the sliding window approach in recovering the temporal ground truth, especially during abrupt correlation changes at block borders.
+
 \begin{figure}[!htb]
 \caption{Testing on 10 blocks of different correlations}
 \includegraphics[width=1\textwidth]{../figures/SyntheticTesting/10block100tCopy.png}
 \label{fig:10block100t}
-(a) In the first row, solid lines show the correlation between block correlations and TimeCorr results; dotted, sliding window results. (b) In the second row, solid lines show mean squared error(MSE) between block correlations and TimeCorr results; dotted, sliding window results. (c) In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results. (d) In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results. (e) The columns represent TimeCorr implementations with a different Gaussian variances.
+In the first row, solid lines show the correlation between block correlations and TimeCorr results; dotted, sliding window results. In the second row, solid lines show mean squared error(MSE) between block correlations and TimeCorr results; dotted, sliding window results. In the first two rows, the different colors represent correlation and MSE between the true correlation in each block and the recovered results. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results. Finally, the columns represent TimeCorr implementations with a different Gaussian variances.
 \end{figure}
 
-The average results of running TimeCorr and the sliding window method on 100 datasets containing 10 blocks, each occupying 100 time points, is displayed in Figure \ref{fig:10block100t}. In the graphs on the first row, each color represents the correlation between the true correlation structure of a block and the results from the TimeCorr and the sliding window approach, which are represented by solid and dotted lines, respectively. The graphs show that both the TimeCorr and the sliding window approach are able to effectively recover the correct correlation structure for each block. In addition, the TimeCorr approach is able to more accurately recover the temporal block correlation at each time point when the Gaussian variance for its coefficient generation is low (in other words, when the resolution is high). In contrast, when the TimeCorr Gaussian variance increases, the results slowly gains smoother transition in-between correlation blocks but in exchange for lower recovery resolution and lower temporal accuracy.
+The graphs displayed in Figure \ref{fig:10block100t} are from evaluating results from running TimeCorr and the sliding window method on 100 block correlation datasets, each containing 10 blocks of 100 time points. In the graphs on the first row, each color represents the correlation between the true correlation structure of a block and the results from the TimeCorr and the sliding window approach, which are represented by solid and dotted lines, respectively. The graphs show that both the TimeCorr and the sliding window approach are able to effectively recover the correct correlation structure for each block. In addition, the TimeCorr approach is able to more accurately recover the temporal block correlation at each time point when the Gaussian variance for its coefficient generation is low (in other words, when the resolution is high). In contrast, when the TimeCorr Gaussian variance increases, the results slowly gains smoother transition in-between correlation blocks but in exchange for lower recovery resolution and lower temporal accuracy.
 
 These patterns are confirmed by the graphs in the second row, which show the MSE between the block correlations and the TimeCorr and the sliding window results, represented by solid and dotted lines, respectively. TimeCorr and the sliding window approach seem to have very similar performances when the TimeCorr variance is low. But as the Guassian density variance for TimeCorr coefficients generation increases, the mean squared error of TimeCorr decreases significantly, indicating that TimeCorr is able to produce more precise results at block centers when the Gaussian variance is high.
 
@@ -315,10 +323,10 @@ The graphs in the third and fourth row show the correlation and MSE between the 
 \caption{Testing on 2 blocks of different correlations}
 \includegraphics[width=1\textwidth]{../figures/SyntheticTesting/2block250t.png}
 \label{fig:2block250t}
-(a) In the first row, solid lines show the correlation between block correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (b) In the second row, solid lines show mean squared error(MSE) between block correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (c) In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. (d) In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. (e) The columns represent TimeCorr implementations with a different Gaussian variances.
+In the first row, solid lines show the correlation between block correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the second row, solid lines show mean squared error(MSE) between block correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the first two rows, the different colors represent correlation and MSE between the true correlation in each block and the recovered results. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. Finally, The columns represent TimeCorr implementations with a different Gaussian variances.
 \end{figure}
 
-To further confirm our results, we rerun the test on 100 dataset containing 2 blocks of different correlations, each containing 250 time points. The average results are shown in Figure \ref{fig:2block250t}, with ground truth and random guess displayed for comparison. From these graphs, we can can confirm TimeCorr boasts significantly better performances than the sliding window approach in both correlation and MSE when the ground truth correlation is stable. Furthermore, TimeCorr is able to more effectively recover correlations structures at abrupt transitions using a high resolution setup (low Gaussian variance).
+To further confirm our results, we rerun the test on 100 datasets containing 2 blocks of different correlations, each containing 250 time points. The average results are shown in Figure \ref{fig:2block250t}, with ground truth and random guess displayed for comparison. From these graphs, we can can confirm TimeCorr boasts significantly better performances than the sliding window approach in both correlation and MSE when the ground truth correlation is stable. Furthermore, TimeCorr is able to more effectively recover correlations structures at abrupt transitions using a high resolution setup (low Gaussian variance).
 
 \subsubsection{Single Subject Synthetic Dataset with ramping correlations}
 
@@ -338,12 +346,13 @@ W_t = Cholesky(C_t) \cdot X_t
 \item Piece everything together to form the new synthetic dataset W that possesses the designated dynamic correlation structure.
 \end{enumerate}
 
+To evaluate and compare the performances of TimeCorr and the sliding window method in recovering the ground truth in ramping correlation datasets, we used four metrics: (1) correlation with the two terminal ground truths, (2) MSE with the two terminal ground truths, (3) correlation with the temporal ground truth, and (4) MSE with the temporal ground truth. The first two metrics were chosen to demonstrate how well TimeCorr and the sliding window method can recover the pattern of linear transition between the two terminal ground truths. The last two metrics were chosen to demonstrate the overall performance of TimeCorr and the sliding window approach in recovering the temporal ground truth.
 
 \begin{figure}[!htb]
 \caption{Testing on 1000 time point ramping dataset}
 \includegraphics[width=1\textwidth]{../figures/SyntheticTesting/ramp1000t4var.png}
 \label{fig:ramp1000t4var}
-(a) In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (b) In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (c) In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. (d) In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. (e) The columns represent TimeCorr implementations with a different Gaussian variances. (f) In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation.
+In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. Lastly, the columns represent TimeCorr implementations with a different Gaussian variances.
 \end{figure}
 
 First, 100 ramping datasets with 1000 time points were generated to produce a gradual linear transition between two distinct correlation structures. The average results are displayed in Figure \ref{fig:ramp1000t4var}. At Gaussian variance equal to 100, TimeCorr shows very similar performance with the sliding window method with a window length of 51, albeit TimeCorr results do not come at the expense of extensive data-loss. When the Gaussian variance of TimeCorr is increased beyond 100, the TimeCorr results' advantages over the sliding window result immediately becomes obvious in both MSE and their correlation with the temporal ground truths. This phenomenon is most evident in the third and fourth row, where the TimeCorr results consistently shows higher correlation and lower MSE with the ground truth at almost every time point.
@@ -352,7 +361,7 @@ First, 100 ramping datasets with 1000 time points were generated to produce a gr
 \caption{Testing on 500 time point ramping dataset}
 \includegraphics[width=1\textwidth]{../figures/SyntheticTesting/ramp500t4var.png}
 \label{fig:ramp500t4var}
-(a) In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (b) In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (c) In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. (d) In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. (e) The columns represent TimeCorr implementations with a different Gaussian variances. (f) In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation.
+In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. Finally, The columns represent TimeCorr implementations with a different Gaussian variances.
 \end{figure}
 
 TimeCorr's performance advantage is further verified by the testing results from 100 ramping datasets of 500 time points, where the linear transitions between the two distinct terminal correlation structures are accelerated from the 1000 time point datasets. The average results are shown in Figure \ref{fig:ramp500t4var}. In contrast to the results from the 1000 time point datasets, the performance difference is more evident in the results from the 500 time point datasets. As the temporal ground truth correlation linearly transitions from the left terminal correlation structure to the right terminal correlation structure within 500 time points, the rate of change at each time point is much greater than that of the 1000 time point dataset. Under these conditions, the TimeCorr results consistently shows significantly higher correlation and lower MSE with the temporal ground truths than the sliding window results. TimeCorr's superior performance here indicates that it is better at recovering rapidly changing dynamic correlation structures than the sliding window approach. In addition, the results does not seem to change significantly from the 500 variance TimeCorr implementation to the 1500 variance TimeCorr implementation, which might be due to the variance exceeding the dataset time length.
@@ -361,7 +370,7 @@ TimeCorr's performance advantage is further verified by the testing results from
 \caption{Testing on 100 time point ramping dataset}
 \includegraphics[width=1\textwidth]{../figures/SyntheticTesting/ramp100t4var.png}
 \label{fig:ramp100t4var}
-(a) In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (b) In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (c) In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. (d) In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. (e) The columns represent TimeCorr implementations with a different Gaussian variances. (f) In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation.
+In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. Finally, the columns represent TimeCorr implementations with a different Gaussian variances.
 \end{figure}
 
 To further verify the advantages of TimeCorr in recovering highly dynamic correlation structures and the limitations of changing TimeCorr Gaussian variance in datasets with short time lengths, we conducted analysis on 100 ramping datasets of only 100 time points, where the linear transitions between the two distinct terminal correlation structures are further accelerated from the 500 time point datasets. The results are shown in Figure \ref{fig:ramp100t4var} and confirm our observations from the previous tests: the TimeCorr approach consistently out-performs the sliding window approach in every setup and TimeCorr's performance stagnates/worsens as its Gaussian variance increases beyond the total time length of the dataset. These results further consolidates TimeCorr's superiority over the sliding window method in recovering highly dynamic correlation structures. In addition, we gained very useful insight on how to select Gaussian variance for TimeCorr to produce the best recovery results: the most stable results seem to come from a Gaussian variance equal to the lesser between the total time length and 1000 time points.
@@ -370,7 +379,7 @@ To further verify the advantages of TimeCorr in recovering highly dynamic correl
 \caption{Testing on 1000 time point ramping dataset}
 \includegraphics[width=1\textwidth]{../figures/SyntheticTesting/ramp1000t4slide.png}
 \label{fig:ramp1000t4slide}
-(a) In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (b) In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (c) In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. (d) In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. (e) The columns represent different sliding window implementations with varying window lengths. (f) In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation.
+In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. Finally, the columns represent different sliding window implementations with varying window lengths.
 \end{figure}
 
 Lastly, to demonstrate TimeCorr's advantage over the sliding window approach generalizes to all setups, we conducted an analysis on 100 ramping datasets, each containing 1000 time points, to compare TimeCorr with sliding window implementations of varying window length. The results are shown in Figure \ref{fig:ramp1000t4slide}. The TimeCorr setup used for comparison has a Gaussian variance of 1000, a standard setup with average performance among all TimeCorr setups in the previous tests. From the graphs, we can see that the performance of sliding window generally increases as the window length increases, but the rate of improvement decreases dramatically past a window length of 51 time points (marginal improvement when an additional 50 time points is added to the window length). In addition, the performance of the sliding window approach at a window length of 11 time points is underwhelming in comparison with the TimeCorr approach. As the window length increases to 101 time points, the correlation and MSE between the sliding window result and temporal ground truths gradually nears the performance of the standard TimeCorr implementation. However, a window length of 101 time points is equivalent to around $10\%$ of the time length of most fMRI datasets. Losing $10\%$ of the information for calculation of functional connectivity at each level is impractical for explorations of high level brain dynamics. For the above reasons, we chose TimeCorr as the more preferable method of functional connectivity calculation for our High-Order Brain Dynamics Model.
@@ -383,7 +392,7 @@ Confident with the TimeCorr approach's ability to recover the dynamic correlatio
 \caption{Testing on 100 time point ramping dataset}
 \includegraphics[width=1\textwidth]{../figures/ISFC/t300slide25var1000.png}
 \label{fig:t300slide25var1000}
-(a) In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (b) In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. (c) In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. (d) In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. (e) The columns represent recovery results from datasets with varying noise levels. (f) In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation.
+In the first row, solid lines show the correlation between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the second row, solid lines show mean squared error(MSE) between the two terminal correlations and TimeCorr results; dotted, sliding window results; dot-dashed, ground truth. In the first two rows, the blue lines represent the relationship between recovered result and the left terminal correlation; red line, right terminal correlation. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results; gray, random guess. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results; gray, random guess. Finally, the columns represent recovery results from datasets with varying noise levels.
 \end{figure}
 
 The results show that TimeCorr is able to retrieve the stimulus-driven dynamic correlation structure with relatively high accuracy at low(0.1) to medium(1) noise levels, but fails to recover any meaningful information when the noise level is too high(10 and 100). These results highlight the difficulty of recovering stimulus-driven correlation structures when the subjects display weak cognitive response to the stimulus. However, when the stimuli is able to evoke reasonably strong cognitive response from the subject, TimeCorr can effectively recover the stimuli-driven dynamic correlation structures with relatively high accuracy.
@@ -397,14 +406,13 @@ Next, we evaluated how brain dynamics is represented by each level of high-order
 Three different datasets were used for this analysis: Sherlock, Pieman, and Forrest. Detailed descriptions for each dataset are included in each subsection. For each TimeCorr setup for each dataset, we conducted 100 repetitions of decoding analysis with different random group divisions. All of the following results are the average of 100 repetitions.
 
 \subsubsection{Description for the Pieman Dataset}
-
-The stimuli for this experiment were derived from a 7 minute recording of the ``Pie Man" story by Jim O'Grady. The experiment was conducted on native English speakers with normal hearing, and was divided into four testing conditions: 36 subjects listened to the story from beginning to end, and were labelled as the ``intact" group; 18 subjects listened to a version of the story where the paragraphs were scrambled randomly, and were labelled as the ``paragraph" group; 36 subjects listened to a version of the story where the words were scrambled randomly, and were labelled as the ``word" group; lastly, 36 subjects did not listen to anything and stayed in resting state throughout the experiment, and were labelled as the ``resting" group. 12 seconds of neutral music and 3 seconds of silence preceded and 15 seconds of silence followed each playback in all conditions. The data from music and silence periods were discarded from all analyses.\citep{hasson2016}
+This dataset was collected by Uri Hasson's lab \citep{hasson2016}. The stimuli for this experiment were derived from a 7 minute recording of the ``Pie Man" story by Jim O'Grady. The experiment was conducted on native English speakers with normal hearing, and was divided into four testing conditions: 36 subjects listened to the story from beginning to end, and were labelled as the ``intact" group; 18 subjects listened to a version of the story where the paragraphs were scrambled randomly, and were labelled as the ``paragraph" group; 36 subjects listened to a version of the story where the words were scrambled randomly, and were labelled as the ``word" group; lastly, 36 subjects did not listen to anything and stayed in resting state throughout the experiment, and were labelled as the ``resting" group. 12 seconds of neutral music and 3 seconds of silence preceded and 15 seconds of silence followed each playback in all conditions. The data from music and silence periods were discarded from all analyses.
 
 \subsubsection{Description for the Forrest Dataset}
-The stimuli for this experiment is a two-hour presentation of an audio-only version of the Hollywood feature film ``Forrest Gump" made specifically for a visually impaired audience. The movie was divided into eight 15-minute sessions with breaks in-between, and presented to 20 subjects with normal hearing. During each session, brain activities centered on the auditory cortices in both brain hemisphere and the frontal and posterior portions of the brain were recorded into high resolution 7-Tesla fMRI datasets.\citep{Hanke2014}
+This dataset was collected by Michael Hanke and coleagues \citep{Hanke2014}. The stimuli for this experiment is a two-hour presentation of an audio-only version of the Hollywood feature film ``Forrest Gump" made specifically for a visually impaired audience. The movie was divided into eight 15-minute sessions with breaks in-between, and presented to 20 subjects with normal hearing. During each session, brain activities centered on the auditory cortices in both brain hemisphere and the frontal and posterior portions of the brain were recorded into high resolution 7-Tesla fMRI datasets.
 
 \subsubsection{Description for the Sherlock Dataset}
-Sixteen participants (17 were described in the original paper, but 1 was removed for this dataset due to a small amount of missing data at the end of the movie scan.) were presented with a 50-minute segment of the audio-visual movie Sherlock (BBC) while undergoing fMRI scan. Before each viewing, the subjects were informed that they would later need to describe the contents of movie. Following the viewing, participants were asked to describe aloud what they recalled of the movie in as much detail as they could while undergoing brain imaging, with no visual input or experimenter guidance. Participants were allowed to speak on any aspect of the movie for as long as they wished, while their speech was recorded with an fMRI-compatible microphone. \citep{Chen2017}
+This dataset was collected by Uri Hasson's Lab \citep{Chen2017}. Sixteen participants (17 were described in the original paper, but 1 was removed for this dataset due to a small amount of missing data at the end of the movie scan.) were presented with a 50-minute segment of the audio-visual movie Sherlock (BBC) while undergoing fMRI scan. Before each viewing, the subjects were informed that they would later need to describe the contents of movie. Following the viewing, participants were asked to describe aloud what they recalled of the movie in as much detail as they could while undergoing brain imaging, with no visual input or experimenter guidance. Participants were allowed to speak on any aspect of the movie for as long as they wished, while their speech was recorded with an fMRI-compatible microphone.
 
 \subsubsection{Results}
 \begin{enumerate}
