--- a/Methods/HOBD.bib
+++ b/Methods/HOBD.bib
@@ -435,3 +435,15 @@ archivePrefix = "arXiv",
    Pages="047404",
    Month="Apr"
 }
+
+% 28772125
+@Article{Baldassano2016,
+   Author="Baldassano, C.  and Chen, J.  and Zadbood, A.  and Pillow, J. W.  and Hasson, U.  and Norman, K. A. ",
+   Title="{{D}iscovering {E}vent {S}tructure in {C}ontinuous {N}arrative {P}erception and {M}emory}",
+   Journal="Neuron",
+   Year="2017",
+   Volume="95",
+   Number="3",
+   Pages="709--721",
+   Month="Aug"
+}
