second draft done

--- a/Methods/HOBD.bib
+++ b/Methods/HOBD.bib
@@ -447,3 +447,31 @@ archivePrefix = "arXiv",
    Pages="709--721",
    Month="Aug"
 }
+
+@Article{Dipasquale2015,
+   Author="Dipasquale, O.  and Griffanti, L.  and Clerici, M.  and Nemni, R.  and Baselli, G.  and Baglio, F. ",
+   Title="{{H}igh-{D}imensional {I}{C}{A} {A}nalysis {D}etects {W}ithin-{N}etwork {F}unctional {C}onnectivity {D}amage of {D}efault-{M}ode and {S}ensory-{M}otor {N}etworks in {A}lzheimer's {D}isease}",
+   Journal="Front Hum Neurosci",
+   Year="2015",
+   Volume="9",
+   Pages="43"
+}
+
+@Article{Iraji2016,
+   Author="Iraji, A.  and Calhoun, V. D.  and Wiseman, N. M.  and Davoodi-Bojd, E.  and Avanaki, M. R.  and Haacke, E. M.  and Kou, Z. ",
+   Title="{{T}he connectivity domain: {A}nalyzing resting state f{M}{R}{I} data using feature-based data-driven and model-based methods}",
+   Journal="Neuroimage",
+   Year="2016",
+   Volume="134",
+   Pages="494--507",
+   Month="Jul"
+}
+
+@Article{xu2013,
+   Author="Xu, J.  and Potenza, M. N.  and Calhoun, V. D. ",
+   Title="{{S}patial {I}{C}{A} reveals functional activity hidden from traditional f{M}{R}{I} {G}{L}{M}-based analyses}",
+   Journal="Front Neurosci",
+   Year="2013",
+   Volume="7",
+   Pages="154"
+}
